Agregue un parrafo explicando como ire mejorando este proyecto de documentacion e irlo subiendo a github.

--- a/index.html
+++ b/index.html
@@ -26,3 +26,11 @@ This script places a badge on your repl's full-browser view back to your repl's 
 </body>
 
 </html>
+
+<n> Ok, seguimos con el curso de programacion basica y voy dejando aqui documentado todo lo que voy aprendiendo. Hasta el momento he aprendido mucho mas de html, css y javascript dE como se utiliza para crear paginas webs. 
+</n>
+Es una buena manera de comenzar afianzando todo lo basico en lenguajes de programacion y asi alcanzar estos dos cursos basicos y dejar claro asi para mi mismo que ya se programar bien para pasar a hackear requete bien xd
+
+Ire construyendo una pagina web con 365fender para ir practicando y documentando a traves de blogs, redes y videos todo el proceso de aprendisaje de convertirme en el mejor hacker del mundo entero. Salud y larga vida Amen.
+
+Ok.. Por ahora me estoy dando cuenta que no se como dejar espacios entre parrafos cuando me lo muestra en el navegador, que lol xD
