--- a/index.html
+++ b/index.html
@@ -34,3 +34,5 @@ Es una buena manera de comenzar afianzando todo lo basico en lenguajes de progra
 Ire construyendo una pagina web con 365fender para ir practicando y documentando a traves de blogs, redes y videos todo el proceso de aprendisaje de convertirme en el mejor hacker del mundo entero. Salud y larga vida Amen.
 
 Ok.. Por ahora me estoy dando cuenta que no se como dejar espacios entre parrafos cuando me lo muestra en el navegador, que lol xD
+
+a ver
