agregando nota del 30 julio

--- a/index.html
+++ b/index.html
@@ -34,3 +34,6 @@ Es una buena manera de comenzar afianzando todo lo basico en lenguajes de progra
 Ire construyendo una pagina web con 365fender para ir practicando y documentando a traves de blogs, redes y videos todo el proceso de aprendisaje de convertirme en el mejor hacker del mundo entero. Salud y larga vida Amen.
 
 Ok.. Por ahora me estoy dando cuenta que no se como dejar espacios entre parrafos cuando me lo muestra en el navegador, que lol xD
+
+30/07/2022
+bueno aqui una vez mas, agregando mas cosas a mis repositorios con lo que voy aprendiendo. Esta vez subo 10 min antes de las 12 mi act para github y conseguir un empleo mientras me vean bien activo en la red y tomarlo cokmo una rutina. Asi que voy a intentar descargar Vscode en el chromebook para actualizar mejor desde alli.
