--- a/index.html
+++ b/index.html
@@ -37,3 +37,6 @@ Ok.. Por ahora me estoy dando cuenta que no se como dejar espacios entre parrafo
 
 30/07/2022
 bueno aqui una vez mas, agregando mas cosas a mis repositorios con lo que voy aprendiendo. Esta vez subo 10 min antes de las 12 mi act para github y conseguir un empleo mientras me vean bien activo en la red y tomarlo cokmo una rutina. Asi que voy a intentar descargar Vscode en el chromebook para actualizar mejor desde alli.
+
+  31/07/2022
+  joder no se guardo lo que escribi antes
