agrego del dia 31

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body
     {
       background-color: #AAAAFF;
-      color= white
+      color=white
     }
     </style>
   <link href="style.css" rel="stylesheet" type="text/css" />
@@ -36,4 +36,21 @@ Ire construyendo una pagina web con 365fender para ir practicando y documentando
 Ok.. Por ahora me estoy dando cuenta que no se como dejar espacios entre parrafos cuando me lo muestra en el navegador, que lol xD
 
 30/07/2022
-bueno aqui una vez mas, agregando mas cosas a mis repositorios con lo que voy aprendiendo. Esta vez subo 10 min antes de las 12 mi act para github y conseguir un empleo mientras me vean bien activo en la red y tomarlo cokmo una rutina. Asi que voy a intentar descargar Vscode en el chromebook para actualizar mejor desde alli.
+bueno aqui una vez mas, agregando mas cosas a mis repositorios con lo que voy aprendiendo. 
+Esta vez subo 10 min antes de las 12 mi act para github y conseguir un empleo 
+mientras me vean bien activo en la red y tomarlo cokmo una rutina. 
+Asi que voy a intentar descargar Vscode en el chromebook para actualizar mejor desde alli.
+
+31/07/2022
+Ok, ya es fin de julio que cayo domingo a las 3 de la tarde aqui acostado desde hatfield 27 badger way
+y me acabo de echar un bailecito porque estoy feliz de poder haber instalado el VScode en el chromebook
+lo que me demuestra un gran avance dentro de mi ruta de aprendizaje (tuve que ir a google porque el Vscode
+me lo mostraba con un abc antes de la palabra pero mal escrito, anyway una aclaratoria ae). Ahora
+se trata de seguir avanzando con los cursos y utilizando el vscode y mi github para ir subiendo
+archivos repos lo que sea a diario e ir aprendiendo a utilizar todo y dejar un rastro de que voy a machete
+(esa fue una palabra que me enseno jenny) por el momento ire llevando mi diario encryptrado en la dark weep
+de forma de que solo yo pueda ir accediendo a esta informacion e ir organizando todo lo que voy aprendiendo
+creo que deberia separar lo que es un diario personal a uno profesional. Eso lo ire pensando de mientras
+e ir ahora a machete con el curso de programacion basica utilizando el vscode github para terminar ya todo
+lo basico y seguir con proyectos mas grandes. A machete kkkkkkkkkkkkkk
+
