Aqui con el anuncio del 2 de agosto

--- a/index.html
+++ b/index.html
@@ -58,3 +58,7 @@ bueno aqui una vez mas, agregando mas cosas a mis repositorios con lo que voy ap
 
   31/07/2022
   joder no se guardo lo que escribi antes
+
+  02/07/2022
+  Aqui de nuevo casi a las 12 guardando mi avance en github para que vean mas adelllante los 
+  de RRHH que me conectaba todos los dias a codear Xd como el dicho Fake it until make it
