--- a/index.html
+++ b/index.html
@@ -62,3 +62,17 @@ bueno aqui una vez mas, agregando mas cosas a mis repositorios con lo que voy ap
   02/07/2022
   Aqui de nuevo casi a las 12 guardando mi avance en github para que vean mas adelllante los 
   de RRHH que me conectaba todos los dias a codear Xd como el dicho Fake it until make it
+
+  03/07/2022
+  Una vez mas escribiendo antes de las 12 de la noche para guardar mi registro en github, debo mejorar
+  esto y hacerlo mas temprano, aunque ahora es mas facil abrirlo desde aqui visual studio code, me ha servido
+  esto como un habito para ir creando mis notas diarias de todo lo que voy aprendiendo y registrando
+  al mismo tiempo siento esa mejoria de cada dia. Hoy aprendi a utilizar obsidian algo que me cayo del 
+  cielo porque ahora podre guardar mis notas alla y no aqui, este sera solo espacio para mi diario de notas
+  mientras que alla armare una gran red neuronal de ciberseguridad con todas las notas que ire agregando
+  a lo largo de los anos. empezamos hoy y espero que todo salga bien. ya manana sigo llenando notas con
+  los cursos y como decia una imagen que vi en la misma pag web de obsidian que era algo como: mis pensamientos
+  no son mis notas, mis notas son mis pensamientos. Algo asi que me hizo explotar la cabeza y me ayudara
+  muchisimo a guardar todo tipo de informacion.
+  <entos. Algo asi que me hizo explotar la cabeza y me ayudara
+  muchisimo a guardar todo tipo de informacion.
