del 03 de agosto

--- a/index.html
+++ b/index.html
@@ -74,5 +74,7 @@ bueno aqui una vez mas, agregando mas cosas a mis repositorios con lo que voy ap
   los cursos y como decia una imagen que vi en la misma pag web de obsidian que era algo como: mis pensamientos
   no son mis notas, mis notas son mis pensamientos. Algo asi que me hizo explotar la cabeza y me ayudara
   muchisimo a guardar todo tipo de informacion.
+
+  a ver otra contribucion 
   <entos. Algo asi que me hizo explotar la cabeza y me ayudara
   muchisimo a guardar todo tipo de informacion.
