del 06 de agosto

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@ bueno aqui una vez mas, agregando mas cosas a mis repositorios con lo que voy ap
 Hoy fue un dia grandioso gracias a Dios.
 Me pagaron los 900+ de mi ultimo trabajo en booker, pague el alquiler, mi sanz, hierba y compre un TV roto que consegui por facebook y aqun estoy en la cama vacilandomelo xd estoy aqui cumpliendo con mis notas y subiendo a git mi registro. tengo que aplicarme mas y comenzar con el Obsidian que ya lo pague hoy. Asi que llego el momento de empezar a guardar mi cerebro digital y ser el puto amo en hacking. a ello. 
 
+06/07/2022
+He roto el televisor. Hace como una hora antes de escribir esto, he roto la tv al pasar de espalda de ella tropesarla y no ver como caia. Me encontraba bastante contento con ella ya que apenas la compre ayer como esribi anteriormente en el diario y ya como se puede notar me he durado tan solo un dia. Todavia la puedo seguir usando, lo cual hare. Aunque se encuentra mas rota que antes. El punto es que llevo estos ultimos dias meditando, anotandolo en mi calendario, y el hecho de que se me cayera la tv me hizo evaluar como me senti en el momento. Al principio muy principio un poco de rabia e incredubilidad de creer que se me habia caido. No me lo creia por otro lado pensaba bueno al menos no pague mucho por ella, pero muy al final me sirvio de darme cuenta de como estaba pensando y como me sentia por algo material que me gustaba y ya lo habia roto por descuidado. Me hizo sentir un poco mejor el no echarme la culpa, saber que es material y que ya paso, no hay nada que pueda hacer para repararla, pero si me llevo una gran leccion, la cual es estar mas atento a las cosas, una tv asi nueva me hubiese costado mucho mas tenerla y aprendi que si llego a toparme de nuevo con otra una mia tengo que prestarle mucha atencion, tengo que disponer de un lugar donde yo se que se encuentre segura y por ninguna razon deba preocuparme por que algo suceda o que alguna accion descuidada mia termine arruinando todo, aprender a evaluar el ambiente en todos los ambitos y tomar medidas de seguridad para disminuir los riesgos.
+
+
+
 
 
     
