del 7 agosto rapido min antes de las 12

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     </style>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
-
+creo que es mas facil guardar aqui rapido antes de las 12 que mes toy jugando mi puesto. O al menos asi rapido tengo que subir esto asi corriendo para guardar mi regstrp en github y poder obtar a un buen puesto, estoy sientiendo como algo de molestia conmigo mismo por no subirlo antes, tengo que salir de estas formas dE procastrinar, tal vez en las noches si me doy cuenta que trbajo mejor como lo vi en la imagen con todas las demas gente. a ver si funcona esto de que me llava seguido el github.
 <body>
-  Ok, despues de este curso de platzi programacion basica que acabo de ver, me deja mas claro las cosas utilizando la programacion como un conjunto de cosas para en este caso crear una pag web como javascrip usando html, css style y html que es un archivo donde se estructura todo.
+  
 </body>
 </html>
