del 07 agosto con el parrafo dos para doble commit

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 creo que es mas facil guardar aqui rapido antes de las 12 que mes toy jugando mi puesto. O al menos asi rapido tengo que subir esto asi corriendo para guardar mi regstrp en github y poder obtar a un buen puesto, estoy sientiendo como algo de molestia conmigo mismo por no subirlo antes, tengo que salir de estas formas dE procastrinar, tal vez en las noches si me doy cuenta que trbajo mejor como lo vi en la imagen con todas las demas gente. a ver si funcona esto de que me llava seguido el github.
+
+Bueno me quedan todavia cinco minutos porque son y cincuenta y cinco y ya subi el parrafo anterior como un repositorio, asi que bien, pero es para reflexionar luego bastante mejor sobre este caso del hacer todo a ultima hora, con la meditacion me he dado cuenta de esto... FVamos que seguire escribiendo luego para ordEnar todo esto dentro de mi.
 <body>
   
 </body>
