--- a/index.html
+++ b/index.html
@@ -18,3 +18,23 @@
   
 </body>
 </html>
+
+
+Hasta aqui bien, ahora creare el codigo visto en el curso
+
+<html>
+  <head>
+    <meta> charset="utf-8 />
+    <title>Mi primera programada</title>
+    <script>
+      let nombre = ""
+      nombre = prompt("Cual es tu nombre?")
+      alert("Bienvenida " + nombre)
+    </script>
+  </head>
+  <body>
+    <h1>Mi primer intento de website</h1>
+    <p>Este es nuestro primer programa completo y profesional</p>
+    <p>Gran programa</p>
+  </body>
+</html>
