--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
-<html>
-  <head>
-    <meta> charset="utf-8 />
-    <title>Mi primera programada</title>
+<!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <title>Piedra, papel o tijera</title>
     <script>
-      let nombre = ""
-      nombre = prompt("Cual es tu nombre?")
-      alert("Bienvenida " + nombre)
+        // 1 es piedra, 2 es papel , 3 es tijera.
+        let jugador = 0
+        let I.A = 2
+        jugador = prompt("Elige 1 para piedra, 2 para papel y 3 para tijera")
+        //alert("Elegiste " + jugador)
+        if(jugador == 1) {
+        alert("Elegiste piedra")
+        }} 
+        else if(jugador == 2) {
+
+        alert("Elegiste papel")
+        }
+        else if(jugador == 3) {
+            alert("Elegiste tijera")
+        } 
+        else 
+            alert("Elegiste PERDER")
     </script>
-  </head>
-  <body>
-    <h1>Mi primer intento de website</h1>
-    <p>Este es nuestro primer programa completo y profesional</p>
-    <p>Gran programa</p>
-  </body>
+</head>
+<body>
+    <h1>Piedra, papel o tijera</h1>
+    <p>Atrevete a jugar</p>
+</body>
 </html>
