al 09 agosto commit con todo igual a platzi curso

--- a/index.html
+++ b/index.html
@@ -5,21 +5,37 @@
     <script>
         // 1 es piedra, 2 es papel , 3 es tijera.
         let jugador = 0
-        let I.A = 2
+        let IA = 2
         jugador = prompt("Elige 1 para piedra, 2 para papel y 3 para tijera")
         //alert("Elegiste " + jugador)
         if(jugador == 1) {
-        alert("Elegiste piedra")
-        }} 
-        else if(jugador == 2) {
-
-        alert("Elegiste papel")
-        }
-        else if(jugador == 3) {
-            alert("Elegiste tijera")
-        } 
-        else 
+            alert("Elegiste 🪨")
+        } else if(jugador == 2) {
+            alert("Elegiste 🧻")
+        } else if(jugador == 3) {
+            alert("Elegiste ✂️")
+        } else {
             alert("Elegiste PERDER")
+        }
+        if(pc == 1) {
+            alert("PC elige 🪨")
+        } else if(pc == 2) {
+            alert("PC elige 🧻")
+        } else if(pc == 3) {
+            alert("PC elige ✂️")
+        }
+        //COMBATE
+        if(pc == jugador){
+          alert("EMPATE")
+        } else if (jugador == 1 && pc == 3) {
+            alert("GANASTE")
+        } else if (jugador == 2 && pc == 1) {
+            alert("GANASTE")
+        } else if (jugador == 3 && pc == 2) {
+            alert("GANASTE")
+        } else {
+            alert("Pero esto que es")
+        }
     </script>
 </head>
 <body>
