al 10 de agosto para sumar al github registro

--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
 <body>
     <h1>Piedra, papel o tijera</h1>
     <p>Atrevete a jugar</p>
+    <p>El mejor momento para ganar</p>
 </body>
 </html>
