--- a/index.html
+++ b/index.html
@@ -44,3 +44,7 @@
     <p>El mejor momento para ganar</p>
 </body>
 </html>
+
+14/08/2022
+
+Llevo dias sin escribir pero el directo de tito del domingo en la noche me dio motivacion para ver proyectos y dejar cosas marcadas aqui en el github. Voy a comenzar mis proyectos, escribo Antes de las doce pero no importa, vamos a por ello.
