--- a/index.html
+++ b/index.html
@@ -48,3 +48,6 @@
 14/08/2022
 
 Llevo dias sin escribir pero el directo de tito del domingo en la noche me dio motivacion para ver proyectos y dejar cosas marcadas aqui en el github. Voy a comenzar mis proyectos, escribo Antes de las doce pero no importa, vamos a por ello.
+
+16/08/2022
+Pensando en que voy a escribir en el diario, ya ni me provoca escribir, esto de min estar antes de las 12 no mola. Pero al entrar me muestra un mensaje que dice, elegiste perder, y pues respondo NO 
