--- a/index.html
+++ b/index.html
@@ -54,3 +54,7 @@ Pensando en que voy a escribir en el diario, ya ni me provoca escribir, esto de 
 
 21/08/2022
 Domingo casi 12, despues dE muchas horas de trabajar con uber. Volvi a ponerme necio con jen. Tengo que mejorar. Al menos esta semana fui estudiando, poco pero repeti las cosas que tenia basicas, siento que esta semana sera de cosas nuevas, preparandome para el viaje en Espana, donde aprovechare mas el tiempo para nuevos conceptos, de eso se trata, con la idea de hoy de poder conseguir el ejpt antes de finalizar el ano, vamos a ello.
+
+22/08/2022
+
+rapidp vamos a dale acadEmia de savi
