--- a/index.html
+++ b/index.html
@@ -63,4 +63,4 @@ rapidp vamos a dale acadEmia de savi
 Ayer escribi rapido antes de las 12 para actualizAr mi it. a pesar de que es un commit al dia sale el registro por lo que lo considero bien, pero deberia ya de ponerme en serio a subir mas repos y tener muchos mas commit por dias entre 10 y unos 40 asi al dia. No tengo muchas ganas de escribir, solo se que actualice, lo que me deja mas tranquilo y comienzo de nuevo con el insta pero esta vez con una toma de habitos dE 365 dias. Vamo a' dale. Con un punto. Mas otro punto. AZl final de todo un buen truco el de agregar puntos para ir acumulando mas commits..
 
 24/08/2022
-Mientras hablo con jen justo antes de las 12. con los trucos de los puntos...
+Mientras hablo con jen justo antes de las 12. con los trucos de los puntos..+..
