--- a/index.html
+++ b/index.html
@@ -64,3 +64,6 @@ Ayer escribi rapido antes de las 12 para actualizAr mi it. a pesar de que es un 
 
 24/08/2022
 Mientras hablo con jen justo antes de las 12. con los trucos de los puntos..+..
+
+25/08/2022
+hoy he arreglado mucho mejor mis redes. Ahora antes de las 12 dejamos otra asistencia. Ya preparando para mejorar en todo esto haciendolo mejor.
