--- a/index.html
+++ b/index.html
@@ -66,4 +66,4 @@ Ayer escribi rapido antes de las 12 para actualizAr mi it. a pesar de que es un 
 Mientras hablo con jen justo antes de las 12. con los trucos de los puntos..+..
 
 25/08/2022
-hoy he arreglado mucho mejor mis redes. Ahora antes de las 12 dejamos otra asistencia. Ya preparando para mejorar en todo esto haciendolo mejor.
+hoy he arreglado mucho mejor mis redes. Ahora antes de las 12 dejamos otra asistencia. Ya preparando para mejorar en todo esto haciendolo mejor..
