--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@ hoy he arreglado mucho mejor mis redes. Ahora antes de las 12 dejamos otra asist
 28/08/2022
 Otra noche antes de las 12 escribiendo un poco. 
 DCeberia de arreglar mejor este codigo, ya que cuando entro me muestra elegiste perder como el codigo de freddy pero en realidad elegi ganar, todos los dias, cada dia gano. Hoy por la manana antes de ir a trabajar de repartidor con uber he dEdicado una hora entera con el curso de savi para afianzar mis conocimientos en Linux, los cuales son mejores cada dia. 
-Como hoy con algo tan simple que estaba escribiendo mal el whoami y despues de que me salio bien me senti contento de haberlo conseguido. Por otra parte complete uber y aplique ingles del dia en la calle trabajando. Por ahora full dedicado esta semana a aprender cosas nuevas con el curso del tito siuuuu..
+Como hoy con algo tan simple que estaba escribiendo mal el whoami y despues de que me salio bien me senti contento de haberlo conseguido. Por otra parte complete uber y aplique ingles del dia en la calle trabajando. Por ahora full dedicado esta semana a aprender cosas nuevas con el curso del tito siuuuu...
 
 Esto fue lo que escribi por la manana, "Joder... estoy estudiando con los vídeos de Savi y antes me puse a lanzar comandos por la terminal a lo random a ver que sabía y resulta que quería saber donde estaba y no recordaba el comando ahora viendo los vídeos de savitar veo que es con pwd"
